# pycmdlineapp-groundwork

./: .coverage  .gitignore  404.html  CHANGELOG.md  README.md  SECURITY.md  _config.yml  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml  taplo.toml  versions.json
.devcontainer/: Dockerfile  devcontainer.json  workspace.code-workspace
.github/workflows/: build.yml  docs.yml  gh-pages.yml  python-package.yml
0.0.1/changelog/: index.html
0.0.1/development/: index.html
0.0.1/search/: search_index.json
0.1.0/: 404.html  index.html
0.1.0/contributing/: index.html
0.1.0/development/: index.html
0.1.0/install/: index.html
0.1.0/reference/factory/: index.html
0.1.0/search/: search_index.json
0.1.0/theme/: announcement.html
0.1.0/usage/settings/: index.html
0.1/install/: index.html
changelog/: index.html
contributing/: index.html
development/: index.html
docs/: _config.yml  _config.yml~bab768502e3b1bf6643d91b7727ac2eaeb30a041  contributing.md  development.md  features.md  home_welcome.md  index.md
docs/development/: index.md
docs/features/: index.md
docs/pycmdlineapp_groundwork/: index.md
docs/pycmdlineapp_groundwork/commandline/: index.md
docs/pycmdlineapp_groundwork/config/: config.md  default.md  index.md
docs/pycmdlineapp_groundwork/factory/: builder.md  descriptor.md  factory.md  index.md  provider.md
docs/pycmdlineapp_groundwork/logging/: index.md
docs/pycmdlineapp_groundwork/utility/: enum_mixins.md  factory.md  index.md  type_descriptors.md
docs/reference/: config.md  index.md
docs/tutorial/: index.md  quick_start.md  tutorial.md
docs/tutorial/quick_start/: index.md
docs/usage/: settings.md
htmlcov/: index.html  pycmdlineapp_groundwork___init___py.html  pycmdlineapp_groundwork_commandline___init___py.html  pycmdlineapp_groundwork_config___init___py.html  pycmdlineapp_groundwork_config_config_py.html  pycmdlineapp_groundwork_config_default_py.html  pycmdlineapp_groundwork_factory___init___py.html  pycmdlineapp_groundwork_factory_builder_py.html  pycmdlineapp_groundwork_factory_descriptor_py.html  pycmdlineapp_groundwork_factory_factory_py.html  pycmdlineapp_groundwork_factory_provider_py.html  pycmdlineapp_groundwork_logging___init___py.html  pycmdlineapp_groundwork_utility___init___py.html  pycmdlineapp_groundwork_utility_enum_mixins_py.html  pycmdlineapp_groundwork_utility_factory_py.html  pycmdlineapp_groundwork_utility_type_descriptors_py.html  status.json
install/: index.html
latest/: 404.html  index.html  sitemap.xml
latest/changelog/: index.html
latest/contributing/: index.html
latest/license/: index.html
latest/reference/factory/: index.html
latest/search/: search_index.json
latest/theme/: main.html
latest/usage/settings/: index.html
license/: index.html
pycmdlineapp_groundwork/: __init__.py  config.poc.py
pycmdlineapp_groundwork/config/: click_config_option.py  click_config_option2.py  config.py  config_data_types.py  config_file_loaders.py  config_file_types.py  default.py  generic_configuration.py  reader.py  validated_configuration.py
pycmdlineapp_groundwork/factory/: __init__.py  builder.py  descriptor.py  factory.py  generic_build_artefact.py
pycmdlineapp_groundwork/plugins/: verbose.py
pycmdlineapp_groundwork/utility/: dict_deep_update.py  factory.py  old_enum_mixins.py  type_descriptors.py  typing.py
reference/config/: index.html
reference/factory/: index.html
search/: search_index.json
site/: 404.html
tests/: climate_poc.py  example_cfg1.yaml  generic_testcase.py  pydantic_settings_poc.py  temp.py  test.env  test_app.py  test_climate.py  test_pydantic_settings.py
tests/config/: example_malformed_cfg1.yaml  test_click_config_option.py  test_config.py  test_config_data_types.py  test_config_file_loaders.py  test_config_file_types.py  test_generic_configuration.py  test_reader.py  test_settings_config_load.py  test_validated_configuration.py
tests/factory/: test_builder.py  test_descriptor.py  test_factory.py  test_generic_build_artefact.py
tests/utility/: test_dict_deep_update.py  test_enum_mixins.py
usage/settings/: index.html
v0.1.0/: sitemap.xml
v0.1.0/contributing/: index.html
v0.1.0/development/: index.html
v0.1.0/install/: index.html
v0.1.0/usage/settings/: index.html
